--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="description" content="東京ゼロエミポイント　LED割引券取扱店マップ">
         <title>ゼロエミマップ</title>
         <style>
         iframe {
