add google site verification

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="description" content="東京ゼロエミポイント　LED割引券取扱店マップ">
+        <meta name="google-site-verification" content="S4-AlLZgIZ2_PfNK1Assa3cCFxDRcL8Jl5EuBkFvz7Q" />
         <title>ゼロエミマップ</title>
         <style>
         iframe {
